package Flyweight;

public abstract class ChessPiece {
    public abstract void display(int x, int y);
}
